2015-07-23 Fixed issue with error after reset and show answers in Limited Check module
2015-07-22 Added show/hide commands in YouTube module
2015-07-21 Fixed issue with alert on Safari Windows in Swiffy Animation module
2015-07-21 Fixed issue with wrong checking in Shape Tracing module
2015-07-21 Fixed parsing and styling in Text module
2015-07-21 Fixed issue with numerating gaps in Writing Calculation module
2015-07-21 Fixed unit tests in Text Audio & Text Selection modules
2015-07-20 Changed defining and parsing gaps in Show Answers in Math module
2015-07-16 Added new module Assessments Navigation Bar
2015-07-15 Added new module Board Game
2015-07-15 Added show answers mode to Math module connected with Text, Table and Image Gap modules
2015-07-10 Added selection by plotting in Magic Boxes module
2015-07-09 Fixed issue with wrong input in order property in Ordering module
2015-07-07 Added checking by words in Magic Boxes module
2015-07-06 Added drag&drop feature and fixed issue with events in isEquation mode in Basic Math Gaps module
2015-07-06 Added compiled Commons library in version 3.0.0 to icplayer libs
2015-07-06 Added StatefullAddonObject: State machine for check, reset, show/hide answers and fixed minor issues with DraggableDroppableObject in Commons (now in version 3.0.0)
2015-07-03 Added show and hide commands to Zoom Image module
2015-07-03 Added static header and static footer
2015-07-02 Added Assets Service
2015-07-02 Added new module Line Selection
2015-07-01 Added Horizontal Bar and reading out the data from the individual Squeeze sensors in LearnPen Report module
2015-07-01 Fixed issue with custom classes in Editor
2015-06-30 Fixed issue with dragging in multiple gap module
2015-06-26 Fixed issue with few Paragraphs with placeholders on the same page
2015-06-26 Fixed issue with reset in IWB Toolbar
2015-06-26 Fixed issue with displaying full screen image in Zoom Image module
2015-06-25 Added handling offline connection in YouTube module