@@ -1,3 +1,4 @@
+2015-07-23 Fixed issue that filled gap was not sending ItemReturned event on click with DraggableDroppableObject  in Commons (now in version 3.0.1)
 2015-07-23 Fixed issue with error after reset and show answers in Limited Check module
 2015-07-22 Added show/hide commands in YouTube module
 2015-07-21 Fixed issue with alert on Safari Windows in Swiffy Animation module
